--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -31,9 +31,9 @@ jobs:
 
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
-  build-and-docker-push:
+  docker-push:
     # Ensure test job passes before pushing image.
-    needs: test
+    needs: build-and-test
 
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
