--- a/install/iter8-controller/configmaps/handlers/start.yaml
+++ b/install/iter8-controller/configmaps/handlers/start.yaml
@@ -9,7 +9,7 @@ spec:
       containers:
       - name: ik-start
         image: iter8/iter8-kfserving:latest
-        command: ["handlers/scripts/start.sh"]
+        command: ["handlers/start.sh"]
         env:
         - name: EXPERIMENT_NAMESPACE
           value: EXPERIMENT_NAMESPACE_VALUE
