--- a/install/iter8-kfserving.yaml
+++ b/install/iter8-kfserving.yaml
@@ -934,7 +934,7 @@ data:
           containers:
           - name: ik-finish
             image: iter8/iter8-kfserving:latest
-            command: ["handlers/scripts/finish.sh"]
+            command: ["handlers/finish.sh"]
             env:
             - name: EXPERIMENT_NAMESPACE
               value: EXPERIMENT_NAMESPACE_VALUE
@@ -955,7 +955,7 @@ data:
           containers:
           - name: ik-start
             image: iter8/iter8-kfserving:latest
-            command: ["handlers/scripts/start.sh"]
+            command: ["handlers/start.sh"]
             env:
             - name: EXPERIMENT_NAMESPACE
               value: EXPERIMENT_NAMESPACE_VALUE
