--- a/.github/workflows/testhandlers.yaml
+++ b/.github/workflows/testhandlers.yaml
@@ -24,6 +24,11 @@ jobs:
         with:
           minikube version: 'v1.15.1'
           kubernetes version: 'v1.17.11'
+      - name: Run Kubernetes tools
+        uses: stefanprodan/kube-tools@v1
+        with:
+          kubectl: 1.18.2
+          kustomize: 3.5.5      
       - run: tests/integration/teststarthandler.sh
       - run: tests/integration/cleanupstart.sh
       - run: tests/integration/testfinishhandler.sh
