--- a/install/iter8-kfserving.yaml
+++ b/install/iter8-kfserving.yaml
@@ -1040,8 +1040,6 @@ spec:
       containers:
       - args:
         - --enable-leader-election
-        - -config
-        - defaults/defaults.yaml
         command:
         - /manager
         env:
@@ -1051,6 +1049,14 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: DEFAULTS_DIR
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.template.spec.containers[0].volumeMounts[0]
+        - name: HANDLERS_DIR
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.template.spec.containers[0].volumeMounts[1]
         image: iter8/etc3:latest
         name: manager
         resources:
