--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -35,6 +35,7 @@ jobs:
       - run: tests/integration/cleanupfinish.sh
       - run: tests/install/checkinstallyaml.sh
 
+  # Runs in parallel
   build-and-test-install:
       - uses: actions/checkout@v2
       - name: Setup Minikube
