--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -1,14 +1,9 @@
 name: Build-test-and-docker-push
 
 on:
+  # manual runs
   workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Test scenario tags'   
+
   push:
     # Publish `main` as Docker `latest` image.
     branches:
