--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -33,16 +33,17 @@ jobs:
           kubectl: 1.18.2
           kustomize: 3.5.5      
       - run: tests/integration/teststarthandler.sh
+      - run: tests/integration/teststarthandler.sh
       - run: tests/integration/cleanupstart.sh
       - run: tests/integration/testfinishhandler.sh
       - run: tests/integration/cleanupfinish.sh
-      - run: tests/install/checkinstallyaml.sh
 
   build-and-test-install:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+      - run: tests/install/checkinstallyaml.sh
       - name: Setup Minikube
         uses: manusa/actions-setup-minikube@v2.0.1
         with:
@@ -52,7 +53,14 @@ jobs:
         uses: stefanprodan/kube-tools@v1
         with:
           kubectl: 1.18.2
-          kustomize: 3.5.5      
+          kustomize: 3.5.5    
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/build-push-action@v2
+        with:
+          context: .
+          tags: handler:latest
+          push: false
+      - run: docker image ls
       - run: tests/install/checkinstalleverything.sh 
 
   build-and-push:
