--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -17,6 +17,14 @@ on:
   pull_request:
 
 jobs:
+  local-registry:
+    runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
+
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -49,13 +57,18 @@ jobs:
           kubectl: 1.18.2
           kustomize: 3.5.5    
       - run: tests/install/checkinstallyaml.sh
-      - uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: network=host
       - uses: docker/build-push-action@v2
         with:
           context: .
-          tags: handler:latest
-          push: false
+          tags: iter8/iter8-kfserving:latest
+          push: true
       - run: docker image ls
+      - name: Inspect
+        run: docker buildx imagetools inspect localhost:5000/iter8/iter8-kfserving:latest
       - name: Setup Minikube
         uses: manusa/actions-setup-minikube@v2.0.1
         with:
