--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -24,6 +24,20 @@ jobs:
         image: registry:2
         ports:
           - 5000:5000
+    steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      with:
+        driver-opts: network=host
+    - name: Build and push to local registry
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: localhost:5000/name/app:latest
+    - name: Inspect
+      run: docker buildx imagetools inspect localhost:5000/name/app:latest
 
   build-and-test:
     runs-on: ubuntu-latest
@@ -48,6 +62,8 @@ jobs:
 
   build-and-test-install:
     runs-on: ubuntu-latest
+
+    needs: local-registry
 
     steps:
       - uses: actions/checkout@v2
