--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -73,16 +73,16 @@ jobs:
           kubectl: 1.18.2
           kustomize: 3.5.5    
       - run: tests/install/checkinstallyaml.sh
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          driver-opts: network=host
-      - uses: docker/build-push-action@v2
-        with:
-          context: .
-          tags: iter8/iter8-kfserving:latest
-          push: true
-      - run: docker image ls
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
+      #   with:
+      #     driver-opts: network=host
+      # - uses: docker/build-push-action@v2
+      #   with:
+      #     context: .
+      #     tags: iter8/iter8-kfserving:latest
+      #     push: true
+      # - run: docker image ls
       - name: Inspect
         run: docker buildx imagetools inspect localhost:5000/iter8/iter8-kfserving:latest
       - name: Setup Minikube
