--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -17,31 +17,35 @@ on:
   pull_request:
 
 jobs:
-  local-registry:
+  local-docker-build:
     runs-on: ubuntu-latest
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
     steps:
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      with:
-        driver-opts: network=host
-    - name: Build and push to local registry
+    - uses: actions/checkout@v2    
+    - uses: docker/setup-buildx-action@v1
+    - name: Build and push to /tmp
       uses: docker/build-push-action@v2
       with:
-        push: true
-        tags: localhost:5000/name/app:latest
-    - name: Inspect
-      run: docker buildx imagetools inspect localhost:5000/name/app:latest
+        context: .
+        file: ./Dockerfile
+        tags: iter8-kfserving:latest
+        outputs: type=docker,dest=/tmp/image.tar
 
-  build-and-test:
+  test-install-yaml:
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Kubernetes tools
+      uses: stefanprodan/kube-tools@v1
+      with:
+        kubectl: 1.18.2
+        kustomize: 3.5.5    
+    - run: tests/install/testinstallyaml.sh
 
+  test-start-and-finish-handlers:
+    runs-on: ubuntu-latest
+    needs:
+    - local-docker-build
+    - test-install-yaml
     steps:
       - uses: actions/checkout@v2
       - name: Setup Minikube
@@ -60,10 +64,11 @@ jobs:
       - run: tests/integration/testfinishhandler.sh
       - run: tests/integration/cleanupfinish.sh
 
-  build-and-test-install:
+  test-install:
     runs-on: ubuntu-latest
-
-    needs: local-registry
+    needs:
+    - local-docker-build
+    - test-install-yaml
 
     steps:
       - uses: actions/checkout@v2
@@ -95,8 +100,8 @@ jobs:
   build-and-push:
     # Ensure test job passes before pushing image.
     needs: 
-    - build-and-test
-    - build-and-test-install
+    - test-start-and-finish-handlers
+    - test-install
 
     runs-on: ubuntu-latest
 
