--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -57,7 +57,18 @@ jobs:
         uses: stefanprodan/kube-tools@v1
         with:
           kubectl: 1.18.2
-          kustomize: 3.5.5      
+          kustomize: 3.5.5     
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: image
+          path: /tmp
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/myimage.tar
+          docker image ls -a
       - run: tests/integration/teststarthandler.sh
       - run: tests/integration/teststarthandler.sh
       - run: tests/integration/cleanupstart.sh
@@ -78,16 +89,6 @@ jobs:
           kubectl: 1.18.2
           kustomize: 3.5.5    
       - run: tests/install/checkinstallyaml.sh
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
-      #   with:
-      #     driver-opts: network=host
-      # - uses: docker/build-push-action@v2
-      #   with:
-      #     context: .
-      #     tags: iter8/iter8-kfserving:latest
-      #     push: true
-      # - run: docker image ls
       - name: Inspect
         run: docker buildx imagetools inspect localhost:5000/iter8/iter8-kfserving:latest
       - name: Setup Minikube
