--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -29,6 +29,11 @@ jobs:
         file: ./Dockerfile
         tags: iter8-kfserving:latest
         outputs: type=docker,dest=/tmp/image.tar
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: image
+        path: /tmp/image.tar
 
   test-install-yaml:
     runs-on: ubuntu-latest
@@ -48,16 +53,6 @@ jobs:
     - test-install-yaml
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Minikube
-        uses: manusa/actions-setup-minikube@v2.0.1
-        with:
-          minikube version: 'v1.15.1'
-          kubernetes version: 'v1.17.11'
-      - name: Run Kubernetes tools
-        uses: stefanprodan/kube-tools@v1
-        with:
-          kubectl: 1.18.2
-          kustomize: 3.5.5     
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Download artifact
@@ -69,6 +64,16 @@ jobs:
         run: |
           docker load --input /tmp/myimage.tar
           docker image ls -a
+      - name: Setup Minikube
+        uses: manusa/actions-setup-minikube@v2.0.1
+        with:
+          minikube version: 'v1.15.1'
+          kubernetes version: 'v1.17.11'
+      - name: Run Kubernetes tools
+        uses: stefanprodan/kube-tools@v1
+        with:
+          kubectl: 1.18.2
+          kustomize: 3.5.5     
       - run: tests/integration/teststarthandler.sh
       - run: tests/integration/teststarthandler.sh
       - run: tests/integration/cleanupstart.sh
