use docker artifact image.tar

--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -62,7 +62,7 @@ jobs:
           path: /tmp
       - name: Load Docker image
         run: |
-          docker load --input /tmp/myimage.tar
+          docker load --input /tmp/image.tar
           docker image ls -a
       - name: Setup Minikube
         uses: manusa/actions-setup-minikube@v2.0.1
