--- a/.github/workflows/dockerpush.yaml
+++ b/.github/workflows/dockerpush.yaml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        persist-credentials: false
+        fetch-depth: 0
     - uses: docker/setup-buildx-action@v1
     - uses: docker/login-action@v1
       with:
@@ -37,3 +40,18 @@ jobs:
         context: .
         tags: ${{ env.OWNER }}/${{ env.REPO }}:${{ env.VERSION }}
         push: true
+    - run: snap install yq
+    - name: Create local changes
+      run: |
+        yq w -i install/iter8-controller/configmaps/handlers/start.yaml spec.template.spec.containers[0].image ${{ env.OWNER }}/${{ env.REPO }}:${{ env.VERSION }}
+        yq w -i install/iter8-controller/configmaps/handlers/finish.yaml spec.template.spec.containers[0].image ${{ env.OWNER }}/${{ env.REPO }}:${{ env.VERSION }}
+    - name: Commit files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -a -m "Fixed images in handler yamls"
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
