--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -10,6 +10,7 @@ jobs:
   check-actor:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
+    steps:
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
