--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -5,44 +5,15 @@ on:
     branches:
     - main # Publish `main` as Docker `latest` image.
   pull_request: # Run tests for any PRs.
-  # workflow_run:
-  #   workflows:
-  #   - "Push to Docker"
-  #   branches:
-  #   - main
-  #   types: 
-  #     - completed
+  workflow_run:
+    workflows:
+    - "Push to Docker"
+    branches:
+    - main
+    types: 
+      - completed
 
 jobs:
-  check-actor_push:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
-    steps:
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
-    - name: Dump job context
-      env:
-        JOB_CONTEXT: ${{ toJson(job) }}
-      run: echo "$JOB_CONTEXT"
-    - name: Dump steps context
-      env:
-        STEPS_CONTEXT: ${{ toJson(steps) }}
-      run: echo "$STEPS_CONTEXT"
-    - name: Dump runner context
-      env:
-        RUNNER_CONTEXT: ${{ toJson(runner) }}
-      run: echo "$RUNNER_CONTEXT"
-    - name: Dump strategy context
-      env:
-        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-      run: echo "$STRATEGY_CONTEXT"
-    - name: Dump matrix context
-      env:
-        MATRIX_CONTEXT: ${{ toJson(matrix) }}
-      run: echo "$MATRIX_CONTEXT"    
-
   check-actor_wfr:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_run'
