--- a/.github/workflows/e2etests.yaml
+++ b/.github/workflows/e2etests.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   check-actor_wfr:
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_run'
+    if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion != 'failure'
     steps:
     - name: Dump GitHub context
       env:
